--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-instagram-carousel": "^2.0.1",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
